<resources>
    <string name="app_name">EcoSave</string>
    <string name="login_kor">로그인</string>
    <string name="email_kor">이메일</string>
    <string name="password_kor">비밀번호</string>
    <string name="find_password">비밀번호 찾기</string>
    <string name="sign_up">회원가입</string>

    <string name="ecosave">EcoSave</string>
    <string name="my_resident">내 거주지</string>
    <string name="change_my_resident">내 거주지 변경</string>
    <string name="Where_is_my_position_near_my_resident">내 근처에서 나는...?</string>
    <string name="registered_device_list">등록한 기기 목록</string>
    <string name="add_device">기기 추가</string>
    <string name="energy_consumption">소비전력량</string>
    <string name="CO2">CO2</string>
    <string name="take_picture">사진 촬영</string>
    <string name="how_to_register_device">에너지 소비 효율 등급 라벨을 촬영하여 기기 등록을 할 수 있습니다.</string>
    <string name="kWh_per_month">kWh/월</string>
    <string name="gram_per_hour">g/시간</string>
    <string name="zero">0</string>

    <string name="logout">로그아웃</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Open Navigation Drawer</string>
    <string name="relative_electric_power_consume_grade">전력 소비 상대 등급</string>
    <string name="power_of_consume">소비 전력량</string>
    <string name="use_or_not">사용 여부</string>
    <string name="simulation">시뮬레이션</string>
    <string name="registered_date">등록일</string>
    <string name="delete_device">기기 삭제</string>
    <string name="welcome_to_register">가입을 환영합니다</string>
    <string name="nickname_kor">닉네임</string>
    <string name="password_confirm_kor">비밀번호 확인</string>
    <string name="finish_signup">회원가입 완료</string>
    <string name="email_authentication">이메일 인증</string>
    <string name="enter_6digit_verification_number">인증번호 6자리를 입력해 주세요.</string>
    <string name="authentication_confirmation_email_has_been_sent">인증 확인 메일이 전송되었습니다.</string>
    <string name="finish_email_authentication">이메일 인증 완료</string>
    <string name="swipe_to_left">화면을 왼쪽으로 밀어주세요</string>
    <string name="product_recommendation_list">추천 제품 목록</string>
</resources>