<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailAuthenticationActivity">

    <TextView
        android:id="@+id/textEmailAuthentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="@font/outfit_medium"
        android:gravity="center_horizontal"
        android:text="@string/email_authentication"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutEmailAuthentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEmailAuthentication">

        <TextView
            android:id="@+id/textEmailAuthenticationDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit_bold"
            android:text="@string/authentication_confirmation_email_has_been_sent"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_semibold"
            android:text="example@google.com"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmailAuthenticationDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/enter_6digit_verification_number"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textEmail"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:weightSum="6"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayoutEmailAuthentication">

        <EditText
            android:id="@+id/editTextVerificationNumber0"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1"/>

        <EditText
            android:id="@+id/editTextVerificationNumber1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextVerificationNumber2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextVerificationNumber3"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextVerificationNumber4"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/editTextVerificationNumber5"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:inputType="number"
            android:background="@drawable/enter_verification_code_box"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:maxLength="1"
            android:maxLines="1" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinishEmailAuthentication"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/btn_login"
        android:fontFamily="@font/outfit_medium"
        android:text="@string/finish_email_authentication"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>